@@ -9,7 +9,7 @@ endif
 
 ITEMDB_SRCS=itemdb.cpp gdbmconv.cpp $(DB3_SRCS)
 bin_PROGRAMS=showeq showeqitemdbtool
-showeq_SOURCES=logger.cpp main.cpp spawn.cpp spawnshell.cpp spawnlist.cpp spellshell.cpp spelllist.cpp preferences.cpp m_preferences.cpp vpacket.cpp editor.cpp filter.cpp m_spawnshell.cpp m_spawnlist.cpp m_spellshell.cpp m_spelllist.cpp m_editor.cpp packet.cpp m_packet.cpp interface.cpp m_interface.cpp compass.cpp m_compass.cpp map.cpp m_map.cpp util.cpp experiencelog.cpp m_experiencelog.cpp msgdlg.cpp m_msgdlg.cpp player.cpp m_player.cpp decode.cpp m_decode.cpp skilllist.cpp m_skilllist.cpp statlist.cpp m_statlist.cpp filtermgr.cpp m_filtermgr.cpp mapcore.cpp category.cpp m_category.cpp compassframe.cpp m_compassframe.cpp group.cpp m_group.cpp $(ITEMDB_SRCS)
+showeq_SOURCES=logger.cpp main.cpp spawn.cpp spawnshell.cpp spawnlist.cpp spellshell.cpp spelllist.cpp preferences.cpp m_preferences.cpp vpacket.cpp editor.cpp filter.cpp m_spawnshell.cpp m_spawnlist.cpp m_spellshell.cpp m_spelllist.cpp m_editor.cpp packet.cpp m_packet.cpp interface.cpp m_interface.cpp compass.cpp m_compass.cpp map.cpp m_map.cpp util.cpp experiencelog.cpp m_experiencelog.cpp combatlog.cpp m_combatlog.cpp msgdlg.cpp m_msgdlg.cpp player.cpp m_player.cpp decode.cpp m_decode.cpp skilllist.cpp m_skilllist.cpp statlist.cpp m_statlist.cpp filtermgr.cpp m_filtermgr.cpp mapcore.cpp category.cpp m_category.cpp compassframe.cpp m_compassframe.cpp group.cpp m_group.cpp $(ITEMDB_SRCS)
 
 showeq_LDADD=$(QT_LDFLAGS) $(QTLIB) $(DB3_LIBS) $(LIBPTHREAD) $(MEMORY_LIBS) \
 $(PROFILE_LIBS) $(SHOWEQ_RPATH) $(USER_LDFLAGS)
@@ -41,11 +41,11 @@ sortitem_LDADD=$(QT_LDFLAGS) $(QTLIB) $(LIBPTHREAD) $(SHOWEQ_RPATH) $(USER_LDFLA
 showeqitemdbtool_SOURCES=itemdbtool.cpp util.cpp  $(ITEMDB_SRCS)
 showeqitemdbtool_LDADD=$(QT_LDFLAGS) $(DB3_LIBS) $(QTLIB) $(LIBPTHREAD) $(SHOWEQ_RPATH) $(USER_LDFLAGS)
 
-EXTRA_DIST=classes.h compass.h everquest.h interface.h main.h map.h filter.h preferences.h vpacket.h editor.h packet.h races.h skills.h spells.h util.h experiencelog.h msgdlg.h spawn.h spawnshell.h spawnlist.h spellshell.h spelllist.h languages.h weapons.h weapons27.h decode.h opcodes.h itemdb.h gdbmconv.h cgiconv.h skilllist.h statlist.h db3conv.h dbcommon.h deity.h dump-seqdb.h player.h spelltimes.h crctab.h filtermgr.h point.h mapcore.h category.h compassframe.h group.h fixpt.h libeq.h cpreferences.h weapons28.h weapons2b.h
+EXTRA_DIST=classes.h compass.h everquest.h interface.h main.h map.h filter.h preferences.h vpacket.h editor.h packet.h races.h skills.h spells.h util.h experiencelog.h combatlog.h msgdlg.h spawn.h spawnshell.h spawnlist.h spellshell.h spelllist.h languages.h weapons.h weapons27.h decode.h opcodes.h itemdb.h gdbmconv.h cgiconv.h skilllist.h statlist.h db3conv.h dbcommon.h deity.h dump-seqdb.h player.h spelltimes.h crctab.h filtermgr.h point.h mapcore.h category.h compassframe.h group.h fixpt.h libeq.h cpreferences.h weapons28.h weapons2b.h
 
 BUILT_SOURCES=m_packet.cpp m_spawnshell.cpp m_spawnlist.cpp m_spellshell.cpp \
 m_spelllist.cpp m_editor.cpp m_interface.cpp m_compass.cpp m_map.cpp \
-m_experiencelog.cpp m_msgdlg.cpp m_player.cpp m_decode.cpp m_skilllist.cpp \
+m_experiencelog.cpp m_combatlog.cpp m_msgdlg.cpp m_player.cpp m_decode.cpp m_skilllist.cpp \
 m_statlist.cpp m_filtermgr.cpp m_category.cpp m_compassframe.cpp \
 m_group.cpp m_preferences.cpp 
 
